--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
 <body>
     <div class="main">
         <nav class="navbar navbar-expand-lg  row-justify-content-end sticky-top" style="background-color: black;">
-            <a class="navbar-brand" href="website.html" style="color: aliceblue";>
+            <a class="navbar-brand" href="index.html" style="color: aliceblue";>
                 <img src="assets/logo.png">Mahindra Thar</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -21,7 +21,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="website.html">Home</a>
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
