--- a/contact us.html
+++ b/contact us.html
@@ -12,7 +12,7 @@
 </head>
 <body>
         <nav class="navbar navbar-expand-lg  justify-content-end sticky-top" style="background-color: black;">
-            <a class="navbar-brand" href="website.html" style="color: aliceblue";>
+            <a class="navbar-brand" href="index.html" style="color: aliceblue";>
                 <img src="assets/logo.png">Mahindra Thar</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -20,7 +20,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="website.html">Home</a>
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="about.html">About</a>
@@ -90,27 +90,6 @@
                     </div>
                 </section>
             </main>
-        <!-- <div class="container form">
-            <div class="contact-form">
-                <h2>Contact Us</h2>
-                <form>
-                    <div class="form-group">
-                        <label for="name">Name</label>
-                        <input type="text" class="form-control" id="name"
-                        placeholder="Enter your name">
-                    </div>
-                    <div class="form-group">
-                        <label for="email">Email</label>
-                        <input type="email" class="form-control" id="email" placeholder="Enter your email">
-                    </div>
-                    <div class="form-group">
-                        <label for="message">Message</label>
-                        <textarea class="form-control" id="message" rows="4" placeholder="Your message"></textarea>
-                    </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
-                </form>
-            </div>
-        </div> -->
     <!-- Footer -->
     <footer class="bg-dark text-white text-center py-3">
         <p style="text-align: center;">&copy; 2024 Mahindra Thar. All rights reserved.</p>
