--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
         <nav class="navbar navbar-expand-lg  justify-content-end sticky-top" style="background-color: black;">
-            <a class="navbar-brand" href="website.html" style="color: aliceblue"; >
+            <a class="navbar-brand" href="index.html" style="color: aliceblue"; >
                 <img src="assets/logo.png"> Mahindra Thar</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
                 <span class="navbar-toggler-icon"></span>
@@ -20,7 +20,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="website.html">Home</a>
+                        <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link " href="about.html">About</a>
