--- a/index.html
+++ b/index.html
@@ -40,12 +40,12 @@
        
     
      <!-- Hero Section -->
-        <section class="hero bg-cover text-white text-center p-4">
+        <section class="hero bg-cover text-white container-fluid text-center p-4">
             <div class="info">
-                <h1>Welcome to Thar World</h1>
+                <h2>Welcome to Thar World</h2>
                 <p class="lead" style="font-size: 24px;"><b>A beautiful place to explore</b></p>
                 <div>
-                    <h1>Mahindra Thar LX Diesel 4X4</h1>
+                    <h2>Mahindra Thar LX Diesel 4X4</h2>
                     <p class="lead" style="font-size: 24px"><b>The Ultimate Off-Road Experience</b></p>
                     <a href="contact us.html" class="btn btn-dark button">Book a Test Drive</a>
                 </div>
