--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <div class="main">
-        <nav class="navbar navbar-expand-lg  row-justify-content-end sticky-top" style="background-color: black;">
+        <nav class="navbar navbar-expand-lg  row-justify-content-end sticky-top navbar-dark bg-dark">
             <a class="navbar-brand" href="index.html" style="color: aliceblue";>
                 <img src="assets/logo.png">Mahindra Thar</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
