--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.min.js" integrity="sha384-w1Q4orYjBQndcko6MimVbzY0tgp4pWB4lZ7lr30WKz0vr/aWKhXdBNmNb5D92v7s" crossorigin="anonymous"></script>
 </head>
 <body>
-        <nav class="navbar navbar-expand-lg  justify-content-end sticky-top" style="background-color: black;">
+        <nav class="navbar navbar-expand-lg  justify-content-end sticky-top navbar-dark bg-dark">
             <a class="navbar-brand" href="index.html" style="color: aliceblue"; >
                 <img src="assets/logo.png"> Mahindra Thar</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav">
